Modify Cat Create - Location

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
     <!--  Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fde09b66449caa7c90e2e128e203702e&libraries=services"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <script
     id="javascript-sdk"
