--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>ssafy-blog</title>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+      </style>
   </head>
   <body>
     <div id="app"></div>  
