--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,6 +36,8 @@
   <script id="javascript-sdk" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
   <!-- jQuery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <!-- tweenMax -->
+  <script type="text/javascript" src="./TweenMax.js"></script>
   <!-- iamport.payment.js -->
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
   <style>
