--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title>길냥이히어로즈</title>
 
@@ -48,10 +52,26 @@
       src="https://developers.kakao.com/sdk/js/kakao.min.js"
     ></script>
     <!-- jQuery -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+    ></script>
+    <!-- tweenMax -->
+    <script type="text/javascript" src="./TweenMax.js"></script>
     <!-- iamport.payment.js -->
-    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"
+    ></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Single+Day&display=swap");
+
+      .title {
+        font-family: "Single Day", cursive;
+      }
+    </style>
   </head>
+
   <body>
     <noscript>
       <strong
